--- a/app/src/main/res/layout/nav_home_fragment.xml
+++ b/app/src/main/res/layout/nav_home_fragment.xml
@@ -30,8 +30,7 @@
                 app:title="Taru"
                 android:id="@+id/topAppBar"
                 app:titleCentered="true"
-                app:logo="@drawable/ic_logo_taru"
-                app:menu="@menu/menu_app"/>
+                app:logo="@drawable/ic_logo_taru"/>
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.core.widget.NestedScrollView
